# mxl2ly

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  main.cpp
lib/fmt/: CMakeLists.txt  args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.cc  format.h  os.cc  os.h  ostream.h  printf.h  ranges.h  xchar.h
lib/ghc/: CMakeLists.txt  filesystem.hpp  fs_fwd.hpp  fs_impl.hpp  fs_std.hpp  fs_std_fwd.hpp  fs_std_impl.hpp
lib/nlohmann/: CMakeLists.txt  json.hpp
lib/tclap/: Arg.h  ArgContainer.h  ArgException.h  ArgGroup.h  ArgTraits.h  CMakeLists.txt  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DeferDelete.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  sstream.h
lib/tinyxml2/: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h  tixml2cx.h  tixml2ex.h
src/: CMakeLists.txt  chord.cpp  chord.hpp  corrector.hpp  directions.cpp  directions.hpp  extract_measure_attributes.cpp  extract_meta.cpp  extract_music.cpp  extract_notations.cpp  extract_paper_block.cpp  file_option_parser.cpp  file_option_parser.hpp  file_options.hpp  formatter.cpp  formatter.hpp  header_and_paper.cpp  header_and_paper.hpp  helper.hpp  measure.cpp  measure.hpp  measure_attributes.cpp  measure_attributes.hpp  measure_auxiliary.hpp  measure_directions.hpp  measure_objects.hpp  music_tree.cpp  music_tree.hpp  notations.cpp  notations.hpp  note.cpp  note.hpp  note_attributes.cpp  note_attributes.hpp  note_auxiliary.hpp  part.cpp  part.hpp  part_and_measure.cpp  part_and_measure.hpp  print_lilypond.cpp  (+4 more)
tclap/: CMakeLists.txt
tests/: test-1.ly  test-2.ly  test-3-ideal.ly
tinyxml2/: CMakeLists.txt
